<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <TextView
        android:id="@+id/tv_score_edit_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        style="@style/GameDayScoreCard"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_score_edit_goal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_goals_label"
        style="@style/GameDayScoreCard"
        app:layout_constraintEnd_toStartOf="@+id/btn_score_edit_goal_adder"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_score_edit_player_name" />

    <ImageButton
        android:id="@+id/btn_score_edit_goal_adder"
        android:layout_width="@dimen/plus_minus_icon"
        android:layout_height="@dimen/plus_minus_icon"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@id/tv_score_edit_goal_label"
        app:layout_constraintEnd_toStartOf="@+id/tv_score_edit_goal_total"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_score_edit_goal_label"
        app:layout_constraintTop_toBottomOf="@id/tv_score_edit_goal_label"
        app:srcCompat="@drawable/green_plus"
        android:contentDescription="@string/increase_goal"/>

    <TextView
        android:id="@+id/tv_score_edit_goal_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text=""
        style="@style/GameDayScoreCard"
        app:layout_constraintBottom_toTopOf="@id/btn_score_edit_goal_adder"
        app:layout_constraintEnd_toStartOf="@+id/btn_score_edit_goal_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/btn_score_edit_goal_adder"
        app:layout_constraintTop_toBottomOf="@id/btn_score_edit_goal_adder" />

    <ImageButton
        android:id="@+id/btn_score_edit_goal_minus"
        android:layout_width="@dimen/plus_minus_icon"
        android:layout_height="@dimen/plus_minus_icon"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/tv_score_edit_goal_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_score_edit_goal_total"
        app:layout_constraintTop_toBottomOf="@id/tv_score_edit_goal_total"
        app:srcCompat="@drawable/green_minus"
        android:contentDescription="@string/decrease_goal"/>

    <TextView
        android:id="@+id/tv_score_edit_assist_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_assists_label"
        style="@style/GameDayScoreCard"
        app:layout_constraintTop_toBottomOf="@id/tv_score_edit_goal_label"
        app:layout_constraintRight_toRightOf="@id/tv_score_edit_goal_label"/>

    <ImageButton
        android:id="@+id/btn_score_edit_assist_adder"
        android:layout_width="@dimen/plus_minus_icon"
        android:layout_height="@dimen/plus_minus_icon"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/green_plus"
        app:layout_constraintTop_toBottomOf="@id/tv_score_edit_assist_label"
        app:layout_constraintRight_toRightOf="@id/btn_score_edit_goal_adder"
        app:layout_constraintBottom_toTopOf="@id/tv_score_edit_assist_label"
        android:contentDescription="@string/increase_assists"/>

    <TextView
        android:id="@+id/tv_score_edit_assist_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        style="@style/GameDayScoreCard"
        app:layout_constraintRight_toRightOf="@id/tv_score_edit_goal_total"
        app:layout_constraintTop_toBottomOf="@id/btn_score_edit_assist_adder"
        app:layout_constraintBottom_toTopOf="@id/btn_score_edit_assist_adder"/>


    <ImageButton
        android:id="@+id/btn_score_edit_assist_minus"
        android:layout_width="@dimen/plus_minus_icon"
        android:layout_height="@dimen/plus_minus_icon"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/green_minus"
        app:layout_constraintRight_toRightOf="@id/btn_score_edit_goal_minus"
        app:layout_constraintTop_toBottomOf="@id/tv_score_edit_assist_total"
        app:layout_constraintBottom_toTopOf="@id/tv_score_edit_assist_total"
        android:contentDescription="@string/decrease_assists"/>

    <TextView
        android:id="@+id/tv_score_edit_saves_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_saves_label"
        style="@style/GameDayScoreCard"
        app:layout_constraintTop_toBottomOf="@id/tv_score_edit_assist_label"
        app:layout_constraintRight_toRightOf="@id/tv_score_edit_assist_label"/>

    <ImageButton
        android:id="@+id/btn_score_edit_saves_adder"
        android:layout_width="@dimen/plus_minus_icon"
        android:layout_height="@dimen/plus_minus_icon"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/green_plus"
        app:layout_constraintTop_toBottomOf="@id/tv_score_edit_saves_label"
        app:layout_constraintRight_toRightOf="@id/btn_score_edit_assist_adder"
        app:layout_constraintBottom_toTopOf="@id/tv_score_edit_saves_label"
        android:contentDescription="@string/increase_saves"/>

    <TextView
        android:id="@+id/tv_score_edit_saves_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        style="@style/GameDayScoreCard"
        app:layout_constraintRight_toRightOf="@id/tv_score_edit_assist_total"
        app:layout_constraintTop_toBottomOf="@id/btn_score_edit_saves_adder"
        app:layout_constraintBottom_toTopOf="@id/btn_score_edit_saves_adder"/>


    <ImageButton
        android:id="@+id/btn_score_edit_saves_minus"
        android:layout_width="@dimen/plus_minus_icon"
        android:layout_height="@dimen/plus_minus_icon"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/green_minus"
        app:layout_constraintRight_toRightOf="@id/btn_score_edit_assist_minus"
        app:layout_constraintTop_toBottomOf="@id/tv_score_edit_saves_total"
        app:layout_constraintBottom_toTopOf="@id/tv_score_edit_saves_total"
        android:contentDescription="@string/decrease_saves"/>

    <View
        android:id="@+id/view_score_edit_button_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_score_edit_saves_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <Button
        android:id="@+id/btn_score_edit_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/view_score_edit_button_divider"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>