<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/ll_edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/tv_edit_game_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryText"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/date_of_game"/>


            <Button
                android:id="@+id/btn_edit_game_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@color/colorPrimaryLight"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_edit_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_edit_date">

            <TextView
                android:id="@+id/tv_edit_game_time_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/time_of_game"/>

            <Button
                android:id="@+id/btn_edit_game_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@color/colorPrimaryLight"/>

        </LinearLayout>



        <View
            android:id="@+id/view_edit_game_name_divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toBottomOf="@id/ll_edit_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <TextView
            android:id="@+id/tv_edit_game_opponent_team_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/opp_name"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/view_edit_game_name_divider"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/et_edit_game_opponent_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_game_opponent_team_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <LinearLayout
            android:id="@+id/ll_edit_team_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/et_edit_game_opponent_name"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/tv_edit_game_home_or_away_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/home_or_away_msg"/>

            <Spinner
                android:id="@+id/spr_edit_game_home_or_away"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:entries="@array/home_or_away"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_edit_game_field_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/gd_field_location"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/ll_edit_team_location"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/et_edit_game_field_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_game_field_location_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <TextView
            android:id="@+id/tv_edit_game_note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/notes_label"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/et_edit_game_field_location"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/et_edit_game_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_game_note_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/view_edit_game_button_divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorDivider"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_edit_game_note"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <Button
            android:id="@+id/btn_edit_game_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:textColor="#616161"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/view_edit_game_button_divider"
            app:layout_constraintRight_toRightOf="parent"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>

